# stocks

./: .dockerignore  .env.example  .gitignore  .infisical.json  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.gateway  Dockerfile.py  Dockerfile.service  Dockerfile.web-dev  Makefile  README.md  SPEC.md  bunfig.toml  go.mod  go.sum
cmd/devpub/: main.go
cmd/gateway/: main.go
cmd/goalpost/: main.go
cmd/ingest/: main.go
cmd/regime/: main.go
cmd/risk/: main.go
cmd/router/: main.go
db/migrations/: 0001_init.sql  0002_seed.sql  0003_reflection.sql  0004_llm_invocation.sql  0005_condition_view.sql  0006_company_fact.sql  0007_consensus_score.sql  0008_discovery_candidate.sql  0009_thesis_suggestion.sql  0010_watchlists.sql  0011_discovery_classification.sql  0012_portfolio_settings.sql  0013_estimate_revisions.sql  0014_news_article.sql  0015_crowd_sentiment.sql  0016_attention_item.sql  0017_discovery_pool.sql  0018_drop_news_ticker_fk.sql  0019_dedup_open_candidates.sql  0020_intraday_price_bar.sql  0021_source_health.sql  0022_reopen_context_refreshed_declines.sql  0023_evidence_requirements.sql  0024_research_nomination_rename.sql  0025_one_open_thesis_per_symbol.sql  0026_backfill_evidence_requirements.sql  0027_consensus_crossing_without_thesis.sql  0028_attention_fsm.sql  0029_attention_fsm_backfill.sql  0030_thesis_last_evaluated.sql  0031_research_evidence.sql  0032_brain_theses.sql  0033_cross_sector_scope.sql  0034_source_tasks.sql  0035_source_task_freshness_due.sql  0036_analyst_opinion.sql  0037_manual_trade_lifecycle.sql  0038_evidence_items.sql  0039_macro_source_tasks.sql  0040_filing_metadata_source_tasks.sql  (+28 more)
deploy/local/: docker-compose.dev.yml  docker-compose.firecrawl.yml  docker-compose.yml
docs/: AUTOMATION.md  BRAIN_LOOPS.md  DATA_SOURCES.md  LIFECYCLE.md  PRODUCT_PLAN.md  SYSTEM.md  UX_REVIEW.md
internal/domain/: domain.go
internal/gateway/: server.go
internal/goalpost/: goalpost.go  goalpost_test.go  service.go
internal/ingest/: ingest.go
internal/regime/: regime.go  regime_test.go  service.go  service_test.go
internal/risk/: risk.go  risk_test.go  service.go  service_test.go
internal/router/: router.go  router_test.go  service.go
internal/web/: embed.go
prompts/: challenge-thesis.md  chat-analyst.md  classify-watchlist.md  draft-thesis.md  echo.md  score-sentiment.md  sharpen-thesis.md  synthesize-context.md  update-brain-thesis.md
py/: pyproject.toml
py/src/stocks/: __init__.py  brain_maintainer.py  challenge.py  classify.py  cognition_service.py  config.py  context_maintainer.py  evidence.py  ibkr_paper_orders.py  ibkr_sync.py  llm.py  models.py  prompts.py  research.py  sharpen.py  source_tasks.py  thesis_engine.py
py/tests/: test_brain_maintainer.py  test_cognition_service.py  test_context_maintainer.py  test_ibkr_paper_orders.py  test_ibkr_sync.py  test_llm.py  test_prompts.py  test_research.py  test_source_tasks.py  test_thesis_engine.py
scripts/: doctor.sh  scan-deps.mjs  seed-demo.sh  smoketest.sh  ux-review.mjs  web-preflight.sh
src/: execution.rs  lib.rs  price_alerts.rs
src/attention/: mod.rs
src/automation/: allocator.rs  market_readiness.rs  mod.rs  policy.rs  readiness.rs  simulator.rs
src/consensus/: components.rs  mod.rs  service.rs
src/discovery/: composer.rs  mod.rs  ranking.rs  service.rs  signals.rs
src/gateway/: mod.rs  routes.rs  sse.rs
src/goalpost/: mod.rs  service.rs  tests.rs
src/ingest/: cboe.rs  crowd_sentiment_service.rs  discovery_pool_service.rs  edgar.rs  fmp.rs  fmp_estimates.rs  fmp_estimates_service.rs  fmp_intraday.rs  fmp_live_bars_service.rs  fmp_news.rs  fmp_opinion.rs  fmp_opinion_service.rs  fmp_profile_calendar.rs  fred.rs  (+11 more)
web/: .npmrc  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+73 files in other folders)
