[package]
name = "stocks"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Thesis-driven trading intelligence (Rust services)"
license = "UNLICENSED"
publish = false

# Single crate with library + 7 binaries. Library holds shared platform
# and per-service business logic; binaries are 30-line entry points.
[lib]
name = "stocks"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"

[[bin]]
name = "regime"
path = "src/bin/regime.rs"

[[bin]]
name = "router"
path = "src/bin/router.rs"

[[bin]]
name = "risk"
path = "src/bin/risk.rs"

[[bin]]
name = "goalpost"
path = "src/bin/goalpost.rs"

[[bin]]
name = "devpub"
path = "src/bin/devpub.rs"

[[bin]]
name = "llmsmoke"
path = "src/bin/llmsmoke.rs"

# All versions verified against crates.io max_stable on 2026-05-30.
[dependencies]
anyhow = "=1.0.102"
async-nats = "=0.49.0"
async-trait = "=0.1.89"
axum = { version = "=0.8.9", default-features = false, features = ["http1", "json", "query", "tokio", "matched-path"] }
bytes = "=1.11.1"
chrono = { version = "=0.4.44", default-features = false, features = ["clock", "serde", "std"] }
dotenvy = "=0.15.7"
futures = "=0.3.32"
hex = "=0.4.3"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls", "http2"] }
rust-embed = { version = "=8.11.0", features = ["axum-ex", "mime-guess"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
sqlx = { version = "=0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "json", "chrono", "uuid", "macros", "migrate"] }
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "net"] }
tokio-stream = { version = "=0.1.18", features = ["sync"] }
tower-http = { version = "=0.6.11", features = ["trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "json"] }
url = "=2.5.8"
uuid = { version = "=1.23.2", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"
tempfile = "=3.27.0"
wiremock = "=0.6.5"

# Performance + size tuning for the production binary (distroless image).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Faster dev builds (matters because TDD loop is sacred).
[profile.dev]
opt-level = 0
debug = "line-tables-only"

# Lint policy: deny common footguns, allow stylistic friction on a young codebase.
[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
