[project]
name = "stocks"
version = "0.1.0"
description = "Trading intelligence — Python services (LLM/ML/research)"
requires-python = ">=3.12"
# Exact pins (same hygiene as the frontend; the May-2026 wave hit PyPI too).
# Verified against PyPI 2026-06-26.
dependencies = [
  "pydantic==2.12.4",
  "asyncpg==0.31.0",
  "nats-py==2.12.0",
  "httpx==0.28.1",
  "ib-insync==0.9.86",
]

[project.optional-dependencies]
dev = ["ruff==0.14.4", "pytest==9.0.3", "pytest-asyncio==1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stocks"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ARG"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
